<resources>
    <string name="app_name">CashFlow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="billy_siri">Billy Siri</string>
    <string name="wdsiri_quinnipiac_edu">wdsiri@quinnipiac.edu</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="settings">Settings</string>
    <string name="transactions">Transactions</string>
    <string name="cashflow">CashFlow</string>
    <string name="create_new_account">Create New Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Exit</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="y">Y</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="_0_00">$0.00</string>
    <string name="recent_transactions">Recent Transactions:</string>
    <string name="first_name">First Name</string>
    <string name="email_quinnipiac_edu">email@quinnipiac.edu</string>
    <string name="first_last">First Last</string>
    <string name="new_transaction">New Transaction</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="submit_transaction">Submit Transaction</string>
    <string name="back">Back</string>
</resources>