<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfebfd"
    tools:context=".newTransaction">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/transactionPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_transaction"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/transaction_title"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/transactionPageTitle"
        tools:layout_editor_absoluteX="96dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:inputType="number|text"
        android:text="@string/transaction_amount"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        tools:layout_editor_absoluteX="96dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:inputType="date|text"
        android:text="@string/mm_dd_yyyy"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        tools:layout_editor_absoluteX="96dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="159dp"
        android:layout_height="88dp"
        android:backgroundTint="#3cb043"
        android:text="@string/submit_transaction"
        android:enabled="false"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="458dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#c21807"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.023" />

</androidx.constraintlayout.widget.ConstraintLayout>